tests/rpm-pkgs/libmetalink-0.1.3-15.fc35/output-exp@divine/scan-results.err
Error: COMPILER_WARNING:
libmetalink-0.1.3/lib/metalink_pstate_v4.c:56:10: warning: implicit declaration of function 'timegm' is invalid in C99
#  return timegm(tm);
#         ^
#   54|     return (time_t)timegm64(tm);
#   55|   #else
#   56|->   return timegm(tm);
#   57|   #endif
#   58|   }

Error: COMPILER_WARNING:
libmetalink-0.1.3/lib/metalink_pstate_v4.c:74:8: warning: incompatible integer to pointer conversion assigning to 'char *' from 'int'
#  rest = strptime(date, "%Y-%m-%dT%H:%M:%S", &tm);
#       ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#   72|     }
#   73|   
#   74|->   rest = strptime(date, "%Y-%m-%dT%H:%M:%S", &tm);
#   75|   
#   76|     if(rest == NULL)

Error: COMPILER_WARNING:
libmetalink-0.1.3/lib/metalink_pstate_v4.c:74:10: warning: implicit declaration of function 'strptime' is invalid in C99
#  rest = strptime(date, "%Y-%m-%dT%H:%M:%S", &tm);
#         ^
#   72|     }
#   73|   
#   74|->   rest = strptime(date, "%Y-%m-%dT%H:%M:%S", &tm);
#   75|   
#   76|     if(rest == NULL)
